Fix Video info table on mobile/narrow screens
- Set `top = 30vmin` in media query for vertical layout of video/table.

--- a/src/videos/components/Video/Video.scss
+++ b/src/videos/components/Video/Video.scss
@@ -86,7 +86,11 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
+  .centered-video-table {
+    top: 30vmin;
+  }
+
   .full-video-dims {
     height: 60vmin;
     width: 80vmin;
